# Compiler-Principles

./: README.md
Assignment I/FileIO/: CMakeLists.txt  main.cpp
Assignment I/Lexical Analyzer/: CMakeLists.txt  main.cpp
Assignment II/: Assignment Briefing.txt
Assignment II/Example/: example  example.l  lex.yy.c
Assignment II/Flex/: Flex  Flex.l  Text.txt  lex.yy.c
Assignment III/First_Follow_Set/: CMakeLists.txt  main.cpp
Assignment IV/: Top-Down_Non-Recursive_Predictive_Parser_Complete_Source_Code.cpp
Assignment IV/Top-Down_Non-Recursive_Predictive_Parser/: CMakeLists.txt  cal_first.cpp  cal_first.h  file_IO.cpp  file_IO.h  generate_pt.cpp  generate_pt.h  global.h  main.cpp  non_recursive_parser.cpp  non_recursive_parser.h  proc_production.cpp
Assignment IV/Top-Down_Non-Recursive_Predictive_Parser/IO_Text/: Input_Text.txt  Output_Result.txt
Assignment V/Bottom-Up_LR_Parser/: CMakeLists.txt  bottom_up_lr_parser.cpp  bottom_up_lr_parser.h  cal_first.cpp  cal_first.h  cal_follow.cpp  cal_follow.h  file_IO.cpp  file_IO.h  generate_LR_pt.cpp  generate_LR_pt.h  global.h  main.cpp  proc_production.h
Assignment V/Bottom-Up_LR_Parser/IO_Text/: FOLLOW_Set.txt  Input_Text.txt  Test_Set.txt
Assignment VI/LR_Semantic_Analysis/: CMakeLists.txt  bottom_up_lr_parser.cpp  bottom_up_lr_parser.h  cal_first.h  cal_follow.cpp  cal_follow.h  file_IO.cpp  file_IO.h  generate_LR_pt.h  global.h  main.cpp  proc_input.cpp  proc_input.h  proc_production.h  semantic_rules.cpp  semantic_rules.h
Assignment VI/LR_Semantic_Analysis/IO_Text/: Input_Text.txt
(+14 files in other folders)
